--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -44,6 +44,7 @@
                 <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 40px, 0px);">
                     <a class="dropdown-item" href="{% url 'betaNegocio:cad_un_med_listar' %}">Unidades de Medida</a>
                     <a class="dropdown-item" href="{% url 'betaNegocio:cad_insumos_listar' %}">Insumos de Consumo</a>
+                    <a class="dropdown-item" href="{% url 'betaNegocio:cad_master_listar' %}">Master</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
