--- a/templates/cadastroCostos/cad_master_Form.html
+++ b/templates/cadastroCostos/cad_master_Form.html
@@ -33,5 +33,10 @@
             return false;
         }
     });
+
+    $('form').submit(function() {
+        document.getElementById("overlay").style.display = "block";
+        document.getElementById("floatingCirclesG").style.display = "block";
+    });
   </script>
 {% endblock %}
