--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -1,5 +1,6 @@
 <body>
 {% load staticfiles %}
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -9,6 +10,7 @@
     <meta name="author" content="">
     <title>{% block title %}APP COSTOS{% endblock %}</title>
     <link href="https://bootswatch.com/4/united/bootstrap.min.css" rel="stylesheet">
+      <link href="{% static 'css/loader.css' %}" rel="stylesheet">
 {% block styles %}
     <style>
     .container
@@ -25,6 +27,21 @@
     .table-hover{
 		box-shadow: 10px 10px 5px grey;
 	}
+
+    #overlay {
+        position: fixed;
+        display: none;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0,0,0,0.5);
+        z-index: 2;
+        cursor: pointer;
+    }
+
 
     </style>
 {% endblock %}
@@ -81,9 +98,24 @@
     </form>
     <br>
     {% endblock %}
+    <div id="overlay" ></div>
     {% block content %}
 	    <h4>	Bloque de contenido		</h4>
     {% endblock %}
+
+    {% block spiner %}
+    <div id="floatingCirclesG">
+        <div class="f_circleG" id="frotateG_01"></div>
+        <div class="f_circleG" id="frotateG_02"></div>
+        <div class="f_circleG" id="frotateG_03"></div>
+        <div class="f_circleG" id="frotateG_04"></div>
+        <div class="f_circleG" id="frotateG_05"></div>
+        <div class="f_circleG" id="frotateG_06"></div>
+        <div class="f_circleG" id="frotateG_07"></div>
+        <div class="f_circleG" id="frotateG_08"></div>
+    </div>
+    {% endblock %}
+
     {% block paginator %}
         {% if is_paginated %}
           <ul class="pagination justify-content-center">
@@ -132,6 +164,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
     {% block scripts %}
     {% endblock %}
