--- a/templates/cadastroCostos/cad_insumos_Delete.html
+++ b/templates/cadastroCostos/cad_insumos_Delete.html
@@ -42,5 +42,10 @@
             return false;
         }
     });
+
+    $('form').submit(function() {
+        document.getElementById("overlay").style.display = "block";
+        document.getElementById("floatingCirclesG").style.display = "block";
+    });
   </script>
 {% endblock %}
