--- a/templates/cadastroCostos/cad_mesas_ingreso_Form.html
+++ b/templates/cadastroCostos/cad_mesas_ingreso_Form.html
@@ -17,6 +17,20 @@
         box-shadow: 10px 10px 5px grey;
     }
 
+     #overlay {
+        position: fixed;
+        display: none;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0,0,0,0.5);
+        z-index: 2;
+        cursor: pointer;
+    }
+
 </style>
 
 {% endblock %}
@@ -270,12 +284,13 @@
     });
 
     $('#btnGuardar').on('click', function() {
-    console.log("pasoasosoaoso")
-    $("#id_valor_vendido").val($("#total_amount").val());
-        if (($("#id_valor_vendido").val() <= 0) || ($("#total_amount").val() <= 0)){
-            alert('Valor Vendido no permitido');
-            event.preventDefault();
+        $("#id_valor_vendido").val($("#total_amount").val());
+            if (($("#id_valor_vendido").val() <= 0) || ($("#total_amount").val() <= 0)){
+                alert('Valor Vendido no permitido');
+                event.preventDefault();
         };
+        document.getElementById("overlay").style.display = "block";
+        document.getElementById("floatingCirclesG").style.display = "block";
     });
 
     function calc(){
@@ -301,6 +316,10 @@
         $('#total_amount').val((tax_sum+total).toFixed(2));
     }
 
+    $('form').submit(function() {
+        document.getElementById("overlay").style.display = "block";
+        document.getElementById("floatingCirclesG").style.display = "block";
+    });
 
   </script>
 {% endblock %}
