--- a/templates/cadastroCostos/cad_stock_Delete.html
+++ b/templates/cadastroCostos/cad_stock_Delete.html
@@ -40,5 +40,10 @@
             return false;
         }
     });
+
+    $('form').submit(function() {
+        document.getElementById("overlay").style.display = "block";
+        document.getElementById("floatingCirclesG").style.display = "block";
+    });
   </script>
 {% endblock %}
