Arregla Espera de Ingreso de Mesas

--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -140,7 +140,7 @@
               {% endif %}
             {% endfor %}
             {% if page_obj.has_next %}
-              <li class="page-item">
+              <li class="page-item">templates/cadastroCostos/cad_mesas_ingreso_Form.html
                  <a class="page-link" href="?page={{ page_obj.next_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">&raquo;</a>
               </li>
             {% else %}
