--- a/templates/cadastroCostos/cad_un_med_Delete.html
+++ b/templates/cadastroCostos/cad_un_med_Delete.html
@@ -3,7 +3,7 @@
 {% block searchList %}
 {% endblock %}
 {% block SUBTITLE %}
-    Unidad de Medida
+    Unidades de Medida
 {%endblock%}
 {% block content %}
 <form id="formDelete" method="post">
