--- a/templates/cadastroCostos/cad_mesas_detalle_ingreso_Form.html
+++ b/templates/cadastroCostos/cad_mesas_detalle_ingreso_Form.html
@@ -1,11 +1,21 @@
 {% extends 'base/base.html' %}
-<
+{% load static %}
 {% block SUBTITLE %}
      DETALLE
 {%endblock%}
 {% block searchList %}
 {% endblock %}
 {% block content %}
+<style>
+
+
+    .nmpd-wrapper {display: none;}
+    .nmpd-target {cursor: pointer;}
+    .nmpd-grid {position:absolute; left:50px; top:50px; z-index:5000; -khtml-user-select: none; padding:10px; width: initial;}
+    .nmpd-overlay {z-index:4999;}
+    input.nmpd-display {text-align: right;}
+</style>
+
     <form id="formPost" method="post">
         {% csrf_token %}
         <table>{{ form.as_table }}</table>
@@ -16,6 +26,30 @@
             <a id="someIDA" class = "btn btn-secondary" href="{% url 'betaNegocio:cad_mesas_listar' %}">Cancelar</a>
         {% endblock %}
 
+
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  Launch demo modal
+</button>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 
          <div class="row clearfix">
     <div class="v l-md-12">
@@ -77,7 +111,7 @@
         </tbody>
       </table>
     </div>
-   <div class="row clearfix">
+   <div class="row clearfix">dd
     <div class="col-md-12">
       <button id="btnGuardar" type="submit" class="btn btn-success">Guardar</button>
       <a id="someIDA2" class = "btn btn-secondary" href="{% url 'betaNegocio:cad_mesas_listar' %}">Cancelar</a>
@@ -95,6 +129,8 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/css/select2.min.css" rel="stylesheet" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/virtual-keyboard/1.28.7/css/keyboard.min.css" rel="stylesheet" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/virtual-keyboard/1.28.7/js/jquery.keyboard.js" ></script>
     <script>
     var data
     $('#formPost').keydown(function (e) {
@@ -106,6 +142,7 @@
     });
 
     $(document).ready(function(){
+        $('#id_cantidad_venta').keyboard();
         $.fn.select2.defaults.set( "theme", "bootstrap" );
         $.fn.select2.defaults.set( "width", "auto" );
         $.fn.select2.defaults.set( "placeholder", "Seleccione" );
