--- a/templates/cadastroCostos/cad_un_med_Form.html
+++ b/templates/cadastroCostos/cad_un_med_Form.html
@@ -1,7 +1,7 @@
 {% extends 'base/base.html' %}
 {% load static %}
 {% block SUBTITLE %}
-    Unidad de Medida
+    Unidades de Medida
 {%endblock%}
 {% block searchList %}
 {% endblock %}
