--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -82,15 +82,18 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Mesas</a>
                 <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 40px, 0px);">
-                    <a class="dropdown-item" href="{% url 'betaNegocio:cad_mesa_crear_ingreso' %}">Ingreso de Mesas</a>
+                    <a class="dropdown-item" href="{% url 'betaNegocio:cad_costos_ver_mesas' %}">Ver Mesas</a>
+                    <a class="dropdown-item" href="{% url 'betaNegocio:cad_mesa_crear_ingreso' 5 %}">Ingreso de Mesas</a>
                     <a class="dropdown-item" href="{% url 'betaNegocio:cad_mesas_listar' %}">Listar Movimientos</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Caja</a>
                 <div class="dropdown-menu" x-placement="bottom-start" style="position: absolute; will-change: transform; top: 0px; left: 0px; transform: translate3d(0px, 40px, 0px);">
-                    <a class="dropdown-item" href="{% url 'betaNegocio:cad_ing_ret_listar' %}">Listar Movimientos</a>
-                    <a class="dropdown-item" href="{% url 'betaNegocio:cad_ing_ret_crear' %}">Caja</a>
+                    <!--<a class="dropdown-item" href="{% url 'betaNegocio:cad_ing_ret_listar' %}">Listar Movimientos</a>-->
+                    <!--<a class="dropdown-item" href="{% url 'betaNegocio:cad_ing_ret_crear' %}">Caja</a>-->
+                    <a class="dropdown-item" href="{% url 'betaNegocio:cad_ing_ret_listar_i' %}">Ingreso Caja</a>
+                    <a class="dropdown-item" href="{% url 'betaNegocio:cad_ing_ret_listar_e' %}">Egreso Caja</a>
                 </div>
             </li>
         </ul>
@@ -98,7 +101,7 @@
     </nav>
 {% endblock%}
 <div class="container" >
-    {% block Head2 %}<h2><br>{% block SUBTITLE %}BASE TEMPLATE{% endblock %}<br></h2>{% endblock %}
+    {% block Head2 %}<h2 id="Head2"><br>{% block SUBTITLE %}BASE TEMPLATE{% endblock %}<br></h2>{% endblock %}
     {% block searchList %}
     <br>
     <form method="GET" action="" class="form-inline mt-2 mt-md-0">
